--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -5,7 +5,7 @@
 <body>
 <div>
     <h1>Cherrypicking Class</h1>
-    <p>This is going to be the starting point.</p>
+    <h2>This is going to be the starting point.</h2>
 </div>
 </body>
 </html>
