Our Second Commit

--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -6,6 +6,7 @@
 <div>
     <h1>Cherrypicking Class</h1>
     <h2>This is going to be the starting point.</h2>
+    <h3>This is another commit</h3>
 </div>
 </body>
 </html>
