Our Third Commit

--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -7,6 +7,7 @@
     <h1>Cherrypicking Class</h1>
     <h2>This is going to be the starting point.</h2>
     <h3>This is another commit</h3>
+    <h4>This is the last commit</h4>
 </div>
 </body>
 </html>
