--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -6,6 +6,7 @@
 <div>
     <h1>Cherrypicking Class</h1>
     <p>This is going to be the starting point.</p>
+    <p>We don't want this change</p>
 </div>
 </body>
 </html>
