Others Second Commit (Do Want)

--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -1,6 +1,13 @@
 <html>
 <head>
     <title>Cherrypicking Class</title>
+    <style>
+        h1,h2,h3,h4,h5,h6 {
+            color: red;
+            text-decoration: underline;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <div>
