Others Third Commit (Do Not Want)

--- a/cherrypicking.html
+++ b/cherrypicking.html
@@ -14,6 +14,7 @@
     <h1>Cherrypicking Class</h1>
     <p>This is going to be the starting point.</p>
     <p>We don't want this change</p>
+    <p>We don't want this change either</p>
 </div>
 </body>
 </html>
